Synced accumulated changes  (#4)